# pipiy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/pipiy/: __init__.py  pipiy.py
