[tool.poetry]
name = "pipiy"
version = "0.1.0"
description = ""
authors = ["LunaStev <youngjae681@gmail.com>"]
readme = "README.md"
packages = [{include = "pipiy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
